# openapi/commerce-merged.swagger.json
@@ -4642,6 +4642,10 @@
         "currencyCode": {
           "type": "string"
         },
+        "digits": {
+          "type": "integer",
+          "format": "int32"
+        },
         "text": {
           "type": "string"
         }
@@ -6079,7 +6083,7 @@
           "type": "string",
           "format": "date-time"
         },
-        "Price": {
+        "price": {
           "$ref": "#/definitions/priceInfoPb"
         }
       }
@@ -6484,7 +6488,7 @@
           "type": "string",
           "format": "date-time"
         },
-        "Price": {
+        "price": {
           "$ref": "#/definitions/priceInfoPb"
         }
       }
