# ticketing/api/show/v1/show.pb.go
@@ -537,7 +537,7 @@ type ShowSalesType struct {
 	SeatGroupId  *string                `protobuf:"bytes,4,opt,name=seat_group_id,json=seatGroupId,proto3,oneof" json:"seat_group_id,omitempty"`
 	SaleableFrom *timestamppb.Timestamp `protobuf:"bytes,100,opt,name=saleable_from,json=saleableFrom,proto3" json:"saleable_from,omitempty"`
 	SaleableTo   *timestamppb.Timestamp `protobuf:"bytes,101,opt,name=saleable_to,json=saleableTo,proto3" json:"saleable_to,omitempty"`
-	Price        *price.InfoPb          `protobuf:"bytes,102,opt,name=Price,proto3" json:"Price,omitempty"`
+	Price        *price.InfoPb          `protobuf:"bytes,102,opt,name=price,proto3" json:"price,omitempty"`
 }
 
 func (x *ShowSalesType) Reset() {
@@ -631,7 +631,7 @@ type UpdateShowSalesType struct {
 	SeatGroupId  string                 `protobuf:"bytes,4,opt,name=seat_group_id,json=seatGroupId,proto3" json:"seat_group_id,omitempty"`
 	SaleableFrom *timestamppb.Timestamp `protobuf:"bytes,100,opt,name=saleable_from,json=saleableFrom,proto3" json:"saleable_from,omitempty"`
 	SaleableTo   *timestamppb.Timestamp `protobuf:"bytes,101,opt,name=saleable_to,json=saleableTo,proto3" json:"saleable_to,omitempty"`
-	Price        *price.InfoPb          `protobuf:"bytes,102,opt,name=Price,proto3" json:"Price,omitempty"`
+	Price        *price.InfoPb          `protobuf:"bytes,102,opt,name=price,proto3" json:"price,omitempty"`
 }
 
 func (x *UpdateShowSalesType) Reset() {
@@ -1061,9 +1061,9 @@ var file_ticketing_api_show_v1_show_proto_rawDesc = []byte{
 	0x6c, 0x65, 0x5f, 0x74, 0x6f, 0x18, 0x65, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f,
 	0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69,
 	0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70, 0x52, 0x0a, 0x73, 0x61, 0x6c, 0x65, 0x61, 0x62, 0x6c,
-	0x65, 0x54, 0x6f, 0x12, 0x27, 0x0a, 0x05, 0x50, 0x72, 0x69, 0x63, 0x65, 0x18, 0x66, 0x20, 0x01,
+	0x65, 0x54, 0x6f, 0x12, 0x27, 0x0a, 0x05, 0x70, 0x72, 0x69, 0x63, 0x65, 0x18, 0x66, 0x20, 0x01,
 	0x28, 0x0b, 0x32, 0x11, 0x2e, 0x70, 0x6b, 0x67, 0x2e, 0x70, 0x72, 0x69, 0x63, 0x65, 0x2e, 0x49,
-	0x6e, 0x66, 0x6f, 0x50, 0x62, 0x52, 0x05, 0x50, 0x72, 0x69, 0x63, 0x65, 0x42, 0x10, 0x0a, 0x0e,
+	0x6e, 0x66, 0x6f, 0x50, 0x62, 0x52, 0x05, 0x70, 0x72, 0x69, 0x63, 0x65, 0x42, 0x10, 0x0a, 0x0e,
 	0x5f, 0x73, 0x65, 0x61, 0x74, 0x5f, 0x67, 0x72, 0x6f, 0x75, 0x70, 0x5f, 0x69, 0x64, 0x22, 0x84,
 	0x02, 0x0a, 0x13, 0x55, 0x70, 0x64, 0x61, 0x74, 0x65, 0x53, 0x68, 0x6f, 0x77, 0x53, 0x61, 0x6c,
 	0x65, 0x73, 0x54, 0x79, 0x70, 0x65, 0x12, 0x0e, 0x0a, 0x02, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01,
@@ -1079,9 +1079,9 @@ var file_ticketing_api_show_v1_show_proto_rawDesc = []byte{
 	0x20, 0x01, 0x28, 0x0b, 0x32, 0x1a, 0x2e, 0x67, 0x6f, 0x6f, 0x67, 0x6c, 0x65, 0x2e, 0x70, 0x72,
 	0x6f, 0x74, 0x6f, 0x62, 0x75, 0x66, 0x2e, 0x54, 0x69, 0x6d, 0x65, 0x73, 0x74, 0x61, 0x6d, 0x70,
 	0x52, 0x0a, 0x73, 0x61, 0x6c, 0x65, 0x61, 0x62, 0x6c, 0x65, 0x54, 0x6f, 0x12, 0x27, 0x0a, 0x05,
-	0x50, 0x72, 0x69, 0x63, 0x65, 0x18, 0x66, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x11, 0x2e, 0x70, 0x6b,
+	0x70, 0x72, 0x69, 0x63, 0x65, 0x18, 0x66, 0x20, 0x01, 0x28, 0x0b, 0x32, 0x11, 0x2e, 0x70, 0x6b,
 	0x67, 0x2e, 0x70, 0x72, 0x69, 0x63, 0x65, 0x2e, 0x49, 0x6e, 0x66, 0x6f, 0x50, 0x62, 0x52, 0x05,
-	0x50, 0x72, 0x69, 0x63, 0x65, 0x22, 0x88, 0x03, 0x0a, 0x11, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
+	0x70, 0x72, 0x69, 0x63, 0x65, 0x22, 0x88, 0x03, 0x0a, 0x11, 0x43, 0x72, 0x65, 0x61, 0x74, 0x65,
 	0x53, 0x68, 0x6f, 0x77, 0x52, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x12, 0x2c, 0x0a, 0x0b, 0x61,
 	0x63, 0x74, 0x69, 0x76, 0x69, 0x74, 0x79, 0x5f, 0x69, 0x64, 0x18, 0x0a, 0x20, 0x01, 0x28, 0x09,
 	0x42, 0x0b, 0xe2, 0x41, 0x01, 0x02, 0xfa, 0x42, 0x04, 0x72, 0x02, 0x10, 0x01, 0x52, 0x0a, 0x61,
@@ -1234,10 +1234,10 @@ var file_ticketing_api_show_v1_show_proto_depIdxs = []int32{
 	18, // 12: ticketing.api.show.v1.ShowSalesType.seat_group:type_name -> ticketing.api.location.v1.SeatGroup
 	14, // 13: ticketing.api.show.v1.ShowSalesType.saleable_from:type_name -> google.protobuf.Timestamp
 	14, // 14: ticketing.api.show.v1.ShowSalesType.saleable_to:type_name -> google.protobuf.Timestamp
-	19, // 15: ticketing.api.show.v1.ShowSalesType.Price:type_name -> pkg.price.InfoPb
+	19, // 15: ticketing.api.show.v1.ShowSalesType.price:type_name -> pkg.price.InfoPb
 	14, // 16: ticketing.api.show.v1.UpdateShowSalesType.saleable_from:type_name -> google.protobuf.Timestamp
 	14, // 17: ticketing.api.show.v1.UpdateShowSalesType.saleable_to:type_name -> google.protobuf.Timestamp
-	19, // 18: ticketing.api.show.v1.UpdateShowSalesType.Price:type_name -> pkg.price.InfoPb
+	19, // 18: ticketing.api.show.v1.UpdateShowSalesType.price:type_name -> pkg.price.InfoPb
 	14, // 19: ticketing.api.show.v1.CreateShowRequest.start_time:type_name -> google.protobuf.Timestamp
 	14, // 20: ticketing.api.show.v1.CreateShowRequest.end_time:type_name -> google.protobuf.Timestamp
 	8,  // 21: ticketing.api.show.v1.CreateShowRequest.sales_types:type_name -> ticketing.api.show.v1.UpdateShowSalesType
